--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         </div>
       </div>
 
+      <div class="roster-cards-container">
+        <div class="student-card" id="mary-umoh-card">
+          <a href="students/mary-umoh.html">
+            <div class="view-profile-div">
+              <h3 class="view-profile-text">View Profile</h3>
+            </div>
+            <div class="card-text-container">
+              <h4 class="student-name">Mary Umoh</h4>
+              <p class="student-location">Union, NJ</p>
+            </div>
+          </a>
+        </div>
+
         <div class="roster-cards-container">
           <div class="student-card" id="brian-reynolds-card">
             <a href="students/brian-reynolds.html">
